- Fixed high contrast issue - HFC-2839

--- a/sass/patterns/_homepage.scss
+++ b/sass/patterns/_homepage.scss
@@ -60,6 +60,10 @@
       svg {
         fill: $cardlist-actions-color;
       }
+
+      .audible {
+        color: $cardlist-actions-color;
+      }
     }
 
     &:not(.has-toolbar) > .btn-actions {
